apps/base/redis-cart/redis-cart-ingress-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-cart-ingress

spec:
  podSelector:
    matchLabels:
      app: redis-cart

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: cartservice
      ports:
        - protocol: TCP
          port: 6379
